[gd_scene load_steps=14 format=3 uid="uid://cw1kkvcq5xaab"]

[ext_resource type="Script" uid="uid://c6arcx0m3wkt4" path="res://scripts/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://dlfcjxatsgt4x" path="res://Assets/484636-medieval-wallpaper.webp" id="1_bqqt6"]
[ext_resource type="FontFile" uid="uid://cg36rarl80ed6" path="res://Assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://cgd7332y871bj" path="res://Assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="3_bqqt6"]
[ext_resource type="Script" uid="uid://c2sxjkcrn2d8" path="res://scripts/check_button.gd" id="4_wu84c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("1_bqqt6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.5171842, 0.5171846, 0.5171842, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.70796657, 0.7079665, 0.7079665, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtw2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_8ln24"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ln24"]
texture = ExtResource("1_bqqt6")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1157.0
offset_bottom = 649.0
script = ExtResource("1_8ln24")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.75
offset_top = -44.5
offset_right = 257.75
offset_bottom = 140.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 14

[node name="Start" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtw2f")
text = "START"

[node name="Settings" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtw2f")
text = "SETTINGS"

[node name="How to play" type="Button" parent="MainButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtw2f")
text = "HOW TO PLAY"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -274.5
offset_top = 133.0
offset_right = 274.5
offset_bottom = 209.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 61
text = "Knightfall"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.5
offset_top = -212.5
offset_right = 326.5
offset_bottom = 240.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rtw2f")

[node name="Label" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.0
offset_top = 7.0
offset_right = 298.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.625
offset_top = -84.0
offset_right = 118.625
offset_bottom = -8.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtw2f")
text = "BACK"
script = SubResource("GDScript_8ln24")

[node name="Fullscreen" type="CheckButton" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = -35.0
offset_right = 286.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 32
text = "Fullscreen Mode"
script = ExtResource("4_wu84c")

[node name="HowToPlayPage" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ln24")

[node name="Title" type="Label" parent="HowToPlayPage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -432.5
offset_top = 21.0
offset_right = 432.5
offset_bottom = 106.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 35
text = "How To Play Instructions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="HowToPlayPage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -198.5
offset_right = 550.0
offset_bottom = 301.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Use the following keys:
REMEMBER, TIME IS SCARCE, DONT SACRIFICE IT!!!!!!

1. WASD or ARROW keys

2. Can use space bar to shoot

3. Escape key to return to main menu screen

4. Double Jump as well

5. Shift to speed dash (mid air as well)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back2" type="Button" parent="HowToPlayPage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -544.5
offset_top = -609.0
offset_right = -411.5
offset_bottom = -560.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtw2f")
text = "BACK"
script = SubResource("GDScript_8ln24")

[connection signal="pressed" from="MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainButtons/How to play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="Settings/Fullscreen" to="Settings/Fullscreen" method="_on_toggled"]
[connection signal="pressed" from="HowToPlayPage/Back2" to="." method="_on_back_pressed"]
